Added kvno support Support vmdir join after AD join. To support multiple joins, kvno support is required.
Change-Id: I07188ef0b8290b7398af3c6f9bd507ce67a55b9a

--- a/vmdir/server/vmkdc_mit_tools/Makefile.am
+++ b/vmdir/server/vmkdc_mit_tools/Makefile.am
@@ -3,6 +3,7 @@ thirdparty_builddir = $(top_builddir)/../../vmdir/build/thirdparty
 
 noinst_PROGRAMS = \
     parsedb \
+    ktdump \
     testcrypto
 
 #noinst_PROGRAMS = \
@@ -58,12 +59,12 @@ parsedb_CPPFLAGS = $(MIT_TOOLS_INCLUDES)
 parsedb_LDADD = $(MIT_TOOLS_LDADD)
 parsedb_LDFLAGS = $(MIT_TOOLS_LD_FLAGS)
 
-# # ---- ktdump ----
-# ktdump_SOURCES = ktdump.c
-# ktdump_CPPFLAGS = $(MIT_TOOLS_INCLUDES)
-# ktdump_LDADD = $(MIT_TOOLS_LDADD)
-# ktdump_LDFLAGS = $(MIT_TOOLS_LD_FLAGS)
-# 
+# ---- ktdump ----
+ktdump_SOURCES = ktdump.c
+ktdump_CPPFLAGS = $(MIT_TOOLS_INCLUDES)
+ktdump_LDADD = $(MIT_TOOLS_LDADD)
+ktdump_LDFLAGS = $(MIT_TOOLS_LD_FLAGS)
+
 # ---- testcrypto ----
 testcrypto_SOURCES = test-crypto.c
 testcrypto_LDADD = $(MIT_TOOLS_LDADD)
