Change VMDIR_XXX macros to LIGHTWAVE_XXX macros.
Change-Id: Ic40b2ac5761443a7d08ad0037025632a752169d9

--- a/vmdir/LogonService/VecsAuthentication/CertAuthServer/CertAuthServer.vcproj
+++ b/vmdir/LogonService/VecsAuthentication/CertAuthServer/CertAuthServer.vcproj
@@ -44,7 +44,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="&quot;$(SolutionDir)\include&quot;;&quot;$(VMDIR_WINDOWS_SDK_ROOT)\Include&quot;;&quot;$(VMDIR_WINDOWS_SDK_ROOT)\VC\Include&quot;"
+				AdditionalIncludeDirectories="&quot;$(SolutionDir)\include&quot;;&quot;$(LIGHTWAVE_WINDOWS_SDK_ROOT)\Include&quot;;&quot;$(LIGHTWAVE_WINDOWS_SDK_ROOT)\VC\Include&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -67,7 +67,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="secur32.lib ws2_32.lib"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="&quot;C:\Users\Aishu Raghavan\Perforce\CertAuthServer\depot\lotus\main\vmdir\LogonService\include&quot;;&quot;$(SolutionDir)\$(PlatformName)\$(ConfigurationName)&quot;;&quot;$(VMDIR_WINDOWS_SDK_ROOT)\Lib\x64&quot;;&quot;$(VMDIR_WINDOWS_SDK_ROOT)\VC\Lib\amd64&quot;"
+				AdditionalLibraryDirectories="&quot;C:\Users\Aishu Raghavan\Perforce\CertAuthServer\depot\lotus\main\vmdir\LogonService\include&quot;;&quot;$(SolutionDir)\$(PlatformName)\$(ConfigurationName)&quot;;&quot;$(LIGHTWAVE_WINDOWS_SDK_ROOT)\Lib\x64&quot;;&quot;$(LIGHTWAVE_WINDOWS_SDK_ROOT)\VC\Lib\amd64&quot;"
 				GenerateDebugInformation="true"
 				SubSystem="1"
 				TargetMachine="1"
@@ -121,7 +121,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="&quot;$(SolutionDir)\include&quot;;&quot;$(VMDIR_WINDOWS_SDK_ROOT)\Include&quot;;&quot;$(VMDIR_WINDOWS_SDK_ROOT)\VC\Include&quot;"
+				AdditionalIncludeDirectories="&quot;$(SolutionDir)\include&quot;;&quot;$(LIGHTWAVE_WINDOWS_SDK_ROOT)\Include&quot;;&quot;$(LIGHTWAVE_WINDOWS_SDK_ROOT)\VC\Include&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
@@ -142,7 +142,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="secur32.lib ws2_32.lib idm.lib"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="&quot;$(SolutionDir)\$(PlatformName)\$(ConfigurationName)&quot;;&quot;$(VMDIR_WINDOWS_SDK_ROOT)\Lib\x64&quot;;&quot;$(VMDIR_WINDOWS_SDK_ROOT)\VC\Lib\amd64&quot;"
+				AdditionalLibraryDirectories="&quot;$(SolutionDir)\$(PlatformName)\$(ConfigurationName)&quot;;&quot;$(LIGHTWAVE_WINDOWS_SDK_ROOT)\Lib\x64&quot;;&quot;$(LIGHTWAVE_WINDOWS_SDK_ROOT)\VC\Lib\amd64&quot;"
 				GenerateDebugInformation="true"
 				SubSystem="1"
 				OptimizeReferences="2"
@@ -197,7 +197,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="&quot;$(SolutionDir)\include&quot;;&quot;$(VMDIR_WINDOWS_SDK_ROOT)\Include&quot;;&quot;$(VMDIR_WINDOWS_SDK_ROOT)\VC\Include&quot;"
+				AdditionalIncludeDirectories="&quot;$(SolutionDir)\include&quot;;&quot;$(LIGHTWAVE_WINDOWS_SDK_ROOT)\Include&quot;;&quot;$(LIGHTWAVE_WINDOWS_SDK_ROOT)\VC\Include&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -220,7 +220,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="secur32.lib ws2_32.lib idm.lib"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="&quot;$(SolutionDir)\$(PlatformName)\$(ConfigurationName)&quot;;&quot;$(VMDIR_WINDOWS_SDK_ROOT)\Lib\x64&quot;;&quot;$(VMDIR_WINDOWS_SDK_ROOT)\VC\Lib\amd64&quot;"
+				AdditionalLibraryDirectories="&quot;$(SolutionDir)\$(PlatformName)\$(ConfigurationName)&quot;;&quot;$(LIGHTWAVE_WINDOWS_SDK_ROOT)\Lib\x64&quot;;&quot;$(LIGHTWAVE_WINDOWS_SDK_ROOT)\VC\Lib\amd64&quot;"
 				GenerateDebugInformation="true"
 				SubSystem="1"
 				TargetMachine="17"
@@ -275,7 +275,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="&quot;$(SolutionDir)\include&quot;;&quot;$(VMDIR_WINDOWS_SDK_ROOT)\Include&quot;;&quot;$(VMDIR_WINDOWS_SDK_ROOT)\VC\Include&quot;"
+				AdditionalIncludeDirectories="&quot;$(SolutionDir)\include&quot;;&quot;$(LIGHTWAVE_WINDOWS_SDK_ROOT)\Include&quot;;&quot;$(LIGHTWAVE_WINDOWS_SDK_ROOT)\VC\Include&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
@@ -298,7 +298,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="secur32.lib ws2_32.lib idm.lib"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="&quot;$(SolutionDir)\$(PlatformName)\$(ConfigurationName)&quot;;&quot;$(VMDIR_WINDOWS_SDK_ROOT)\Lib\x64&quot;;&quot;$(VMDIR_WINDOWS_SDK_ROOT)\VC\Lib\amd64&quot;"
+				AdditionalLibraryDirectories="&quot;$(SolutionDir)\$(PlatformName)\$(ConfigurationName)&quot;;&quot;$(LIGHTWAVE_WINDOWS_SDK_ROOT)\Lib\x64&quot;;&quot;$(LIGHTWAVE_WINDOWS_SDK_ROOT)\VC\Lib\amd64&quot;"
 				GenerateDebugInformation="true"
 				SubSystem="1"
 				OptimizeReferences="2"
