--- a/vmdir/client/win/libvmdirclient.vcproj
+++ b/vmdir/client/win/libvmdirclient.vcproj
@@ -43,7 +43,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="&quot;$(OutDir)&quot;;&quot;$(SolutionDir)..\thirdparty\openldap\include&quot;;..;&quot;$(SolutionDir)..\include&quot;;&quot;$(SolutionDir)..\include\public&quot;;&quot;$(SolutionDir)..\include\win&quot;;&quot;$(SolutionDir)..\thirdparty\openldap\libraries\libldap&quot;;&quot;$(SolutionDir)..\thirdparty\openldap\libraries\mdb&quot;;&quot;$(SolutionDir)..\thirdparty\openldap\libraries\liblber&quot;;&quot;$(VMDIR_WINDOWS_SDK_ROOT)\Include&quot;;&quot;$(VMDIR_WINDOWS_SDK_ROOT)\VC\Include&quot;"
+				AdditionalIncludeDirectories="&quot;$(OutDir)&quot;;&quot;$(SolutionDir)..\thirdparty\openldap\include&quot;;..;&quot;$(SolutionDir)..\include&quot;;&quot;$(SolutionDir)..\include\public&quot;;&quot;$(SolutionDir)..\include\win&quot;;&quot;$(SolutionDir)..\thirdparty\openldap\libraries\libldap&quot;;&quot;$(SolutionDir)..\thirdparty\openldap\libraries\mdb&quot;;&quot;$(SolutionDir)..\thirdparty\openldap\libraries\liblber&quot;;&quot;$(LIGHTWAVE_WINDOWS_SDK_ROOT)\Include&quot;;&quot;$(LIGHTWAVE_WINDOWS_SDK_ROOT)\VC\Include&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_LIB;_CRT_SECURE_NO_WARNINGS"
 				GeneratePreprocessedFile="0"
 				MinimalRebuild="true"
@@ -60,7 +60,7 @@
 			/>
 			<Tool
 				Name="VCResourceCompilerTool"
-				AdditionalIncludeDirectories="&quot;$(VMDIR_WINDOWS_SDK_ROOT)\include&quot;;&quot;$(VMDIR_WINDOWS_SDK_ROOT)\VC\atlmfc\include&quot;"
+				AdditionalIncludeDirectories="&quot;$(LIGHTWAVE_WINDOWS_SDK_ROOT)\include&quot;;&quot;$(LIGHTWAVE_WINDOWS_SDK_ROOT)\VC\atlmfc\include&quot;"
 			/>
 			<Tool
 				Name="VCPreLinkEventTool"
@@ -68,7 +68,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="gssapi64.lib krb5_64.lib liblber.lib libldap_r.lib libcommon.lib libeay32.lib ssleay32.lib ws2_32.lib"
-				AdditionalLibraryDirectories="&quot;$(OutDir)&quot;;&quot;$(VMDIR_WINDOWS_SDK_ROOT)\Lib\x64&quot;;&quot;$(VMDIR_WINDOWS_SDK_ROOT)\VC\Lib\amd64&quot;;&quot;$(VMDIR_PLATFORM_SDK_ROOT)\$(ConfigurationName)\lib&quot;"
+				AdditionalLibraryDirectories="&quot;$(OutDir)&quot;;&quot;$(LIGHTWAVE_WINDOWS_SDK_ROOT)\Lib\x64&quot;;&quot;$(LIGHTWAVE_WINDOWS_SDK_ROOT)\VC\Lib\amd64&quot;;&quot;$(LIGHTWAVE_PLATFORM_SDK_ROOT)\$(ConfigurationName)\lib&quot;"
 				ModuleDefinitionFile="libvmdirclient.def"
 				GenerateDebugInformation="true"
 			/>
@@ -123,7 +123,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="&quot;$(OutDir)&quot;;&quot;$(SolutionDir)..\thirdparty\openldap\include&quot;;..;&quot;$(SolutionDir)..\include&quot;;&quot;$(SolutionDir)..\include\public&quot;;&quot;$(SolutionDir)..\include\win&quot;;&quot;$(SolutionDir)..\thirdparty\openldap\libraries\libldap&quot;;&quot;$(SolutionDir)..\thirdparty\openldap\libraries\mdb&quot;;&quot;$(SolutionDir)..\thirdparty\openldap\libraries\liblber&quot;;&quot;$(VMDIR_WINDOWS_SDK_ROOT)\Include&quot;;&quot;$(VMDIR_WINDOWS_SDK_ROOT)\VC\Include&quot;"
+				AdditionalIncludeDirectories="&quot;$(OutDir)&quot;;&quot;$(SolutionDir)..\thirdparty\openldap\include&quot;;..;&quot;$(SolutionDir)..\include&quot;;&quot;$(SolutionDir)..\include\public&quot;;&quot;$(SolutionDir)..\include\win&quot;;&quot;$(SolutionDir)..\thirdparty\openldap\libraries\libldap&quot;;&quot;$(SolutionDir)..\thirdparty\openldap\libraries\mdb&quot;;&quot;$(SolutionDir)..\thirdparty\openldap\libraries\liblber&quot;;&quot;$(LIGHTWAVE_WINDOWS_SDK_ROOT)\Include&quot;;&quot;$(LIGHTWAVE_WINDOWS_SDK_ROOT)\VC\Include&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_LIB;_CRT_SECURE_NO_WARNINGS"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
@@ -138,7 +138,7 @@
 			/>
 			<Tool
 				Name="VCResourceCompilerTool"
-				AdditionalIncludeDirectories="&quot;$(VMDIR_WINDOWS_SDK_ROOT)\include&quot;;&quot;$(VMDIR_WINDOWS_SDK_ROOT)\VC\atlmfc\include&quot;"
+				AdditionalIncludeDirectories="&quot;$(LIGHTWAVE_WINDOWS_SDK_ROOT)\include&quot;;&quot;$(LIGHTWAVE_WINDOWS_SDK_ROOT)\VC\atlmfc\include&quot;"
 			/>
 			<Tool
 				Name="VCPreLinkEventTool"
@@ -146,7 +146,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="gssapi64.lib krb5_64.lib liblber.lib libldap_r.lib libcommon.lib libeay32.lib ssleay32.lib ws2_32.lib"
-				AdditionalLibraryDirectories="&quot;$(OutDir)&quot;;&quot;$(VMDIR_WINDOWS_SDK_ROOT)\Lib\x64&quot;;&quot;$(VMDIR_WINDOWS_SDK_ROOT)\VC\Lib\amd64&quot;;&quot;$(VMDIR_PLATFORM_SDK_ROOT)\$(ConfigurationName)\lib&quot;"
+				AdditionalLibraryDirectories="&quot;$(OutDir)&quot;;&quot;$(LIGHTWAVE_WINDOWS_SDK_ROOT)\Lib\x64&quot;;&quot;$(LIGHTWAVE_WINDOWS_SDK_ROOT)\VC\Lib\amd64&quot;;&quot;$(LIGHTWAVE_PLATFORM_SDK_ROOT)\$(ConfigurationName)\lib&quot;"
 				ModuleDefinitionFile="libvmdirclient.def"
 				GenerateDebugInformation="true"
 			/>
